--- a/.cproject
+++ b/.cproject
@@ -23,10 +23,7 @@
 								</outputEntries>
 							</builder>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.2000206434" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug">
-								<option id="gnu.both.asm.option.include.paths.545937062" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;D:/Program Files/OpenCV/1/include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;D:/Program Files/Boost/include&quot;"/>
-								</option>
+								<option id="gnu.both.asm.option.include.paths.545937062" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath"/>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.944123418" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.1534711434" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base"/>
@@ -36,6 +33,7 @@
 								<option id="gnu.cpp.compiler.option.include.paths.733566817" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;D:/Program Files/OpenCV/1/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;D:/Program Files/Boost/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Cires/modules}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.1643949870" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++11" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.1798246482" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
