--- a/.cproject
+++ b/.cproject
@@ -31,9 +31,9 @@
 								<option id="gnu.cpp.compiler.mingw.exe.debug.option.optimization.level.1246425261" name="Optimization Level" superClass="gnu.cpp.compiler.mingw.exe.debug.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.mingw.exe.debug.option.debugging.level.701279597" name="Debug Level" superClass="gnu.cpp.compiler.mingw.exe.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.733566817" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;D:/Program Files/OpenCV/1/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;D:/Program Files/Boost/include&quot;"/>
-									<listOptionValue builtIn="false" value="C:/Users/Feng/Workspace/Cires/modules"/>
+									<listOptionValue builtIn="false" value="&quot;D:/Program Files/OpenCV/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/modules&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.1643949870" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++11 -Wsign-compare" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.1798246482" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def"/>
@@ -51,8 +51,8 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.1844933068" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.2039129492" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug">
 								<option id="gnu.cpp.link.option.paths.1672855991" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-									<listOptionValue builtIn="false" value="&quot;D:\Program Files\OpenCV\1\x64\mingw\lib&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;D:\Program Files\Boost\lib&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\Program Files\OpenCV\x64\mingw\lib&quot;"/>
 								</option>
 								<option id="gnu.cpp.link.option.libs.822347334" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="opencv_core248d"/>
